Menambahkan halaman tutorial

--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,8 @@
             </div>
             <div  class="exp2">
                 <img src="ux.png">
-                <p><b>Android UI Beginner</b></p>
+                <p><b>Android UI</b></p>
+                <p><b>Beginner</b></p>
                 <small>
                     I am Android Developer Beginer, i'm not enough my experience to develope android personal
                     because i have group and mentor to developing Android.
