--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
                 <label for="check" class="button">
                     <i class="fas fa-bars"></i>
                 </label>
-                <label class="logo">Android Enthusiast</label>
+                <label class="logo" img="andro.jpg"></label>
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="cv.html">MyCV</a></li>
-                        <li><a href="#">Tutorial</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="Tutorial.html">Tutorial</a></li>
+                        <li><a href="Portofolio.html">Portofolio</a></li>
+                        <li><a href="About.html">About</a></li>
                     </ul>
                 </nav>
                 <section class="present">
