Menambahkan tampilan portofolio dengan bootstrap

--- a/Tutorial.html
+++ b/Tutorial.html
@@ -74,7 +74,7 @@
        Tutorial Membuat Aplikasi Sederhrna dengan Seminggu
       </h4>
       <p>
-        Disini saya akan membuat step by step membuat aplikasi-aplikasi sederhana dalam seminggu
+        Saya akan membuat step by step membuat aplikasi-aplikasi sederhana dalam seminggu
       </p>
     </div>
     <div class="card__info">
