merubah tampilan utama

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li><a href="cv.html">MyCV</a></li>
                         <li><a href="Tutorial.html">Tutorial</a></li>
                         <li><a href="Portofolio.html">Portofolio</a></li>
-                        <li><a href="About.html">About</a></li>
+                        <li><a href="About.html">Informasi</a></li>
                     </ul>
                 </nav>
                 <section class="present">
